--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,21 @@
-server.port=8080
-
+server.port=8081
 spring.datasource.url=jdbc:postgresql://localhost:5432/oquv_markaz
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=0705
 spring.jpa.hibernate.ddl-auto=create
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jackson.serialization.fail-on-empty-beans=false
-
 file.upload.folder=upload
-
 spring.session.store-type=none
-
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-
 spring.jpa.open-in-view=true
-
 hibernate.enable_lazy_load_no_trans=true
-
 # jwt da token olish uchun
 jwt.secret.key=my-super-secret-key
-
 # token yaroqlilik muddati
 jwt.token.validity=86400000
+refresh-token.expired.time=86400000
 
 
 
