--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
             <version>3.5.6-Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hibernate5</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
