--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,8 @@ jwt.secret.key=my-super-secret-key
 jwt.token.validity=86400000
 refresh-token.expired.time=86400000
 
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
 
 
 
